syntax = "proto3";
package takeiteasygame.v1;

// Types communs partag√©s entre services
message Player {
  string id = 1;
  string name = 2;
  int32 score = 3;
  bool is_ready = 4;
  bool is_connected = 5;
  int64 joined_at = 6;
}

message GameState {
  string session_id = 1;
  repeated Player players = 2;
  string current_player_id = 3;
  SessionState state = 4;
  string board_state = 5; // JSON serialized board
  int32 turn_number = 6;
}

enum SessionState {
  WAITING = 0;
  IN_PROGRESS = 1;
  FINISHED = 2;
  CANCELLED = 3;
}

message Error {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}